STAND-116: Replace the embedded mysql with mariadb4j in Ref App 2.x (#74)
* Replace the embedded mysql with mariadb4j in Ref App 2.x

* removing nashorn-core

* updating to the latest snapshot

* resized MainFrame and updated readme

* added unit tests